--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,9 +1,7 @@
 name: Rust
 
 # To automatically trigger the workflow
-on:
-  pull_request:
-    types: [ opened, synchronize, reopened ]
+on: [push, pull_request]
 
 env:
   CARGO_TERM_COLOR: always
