--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,9 +16,15 @@ name = "zero2prod"
 actix-web = "4.3.1"
 chrono = { version = "0.4.24", default-features = false, features = ["clock"] }
 config = "0.13.3"
-reqwest = "0.11.18"
+log = "0.4.17"
+secrecy = { version = "0.8.0", features = ["serde"] }
 serde = { version = "1.0.163", features = ["derive"] }
 tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
+tracing = { version = "0.1.37", features = ["log"] }
+tracing-actix-web = "0.7.4"
+tracing-bunyan-formatter = "0.3.7"
+tracing-log = "0.1.3"
+tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
 uuid = { version = "1.3.3", features = ["v4"] }
 
 [dependencies.sqlx]
@@ -32,3 +38,7 @@ features = [
     "chrono", 
     "migrate"
 ]
+
+[dev-dependencies]
+reqwest = "0.11.18"
+once_cell = "1"
