--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ config = "0.13.3"
 log = "0.4.17"
 secrecy = { version = "0.8.0", features = ["serde"] }
 serde = { version = "1.0.163", features = ["derive"] }
+serde-aux = "4.2.0"
 tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
 tracing = { version = "0.1.37", features = ["log"] }
 tracing-actix-web = "0.7.4"
@@ -36,7 +37,8 @@ features = [
     "postgres", 
     "uuid", 
     "chrono", 
-    "migrate"
+    "migrate",
+    "offline"
 ]
 
 [dev-dependencies]
