--- a/configuration/base.yaml
+++ b/configuration/base.yaml
@@ -1,8 +1,8 @@
-application_host:
-  host: 0.0.0.0
+#! configuration/base.yaml
+application:
   port: 8000
 database:
-  host: "127.0.0.1"
+  host: "localhost"
   port: 5432
   username: "postgres"
   password: "password"
