--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -72,17 +72,17 @@ jobs:
         run: cargo test
 
   # `fmt` container job
-  fmt:
-    name: Rustfmt
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: dtolnay/rust-toolchain@stable
-        with:
-          # Specific to dtolnay/rust-toolchain: Comma-separated string of additional components to install
-          components: rustfmt
-      - name: Enforce formatting
-        run: cargo fmt --check
+  # fmt:
+  #   name: Rustfmt
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - uses: dtolnay/rust-toolchain@stable
+  #       with:
+  #         # Specific to dtolnay/rust-toolchain: Comma-separated string of additional components to install
+  #         components: rustfmt
+  #     - name: Enforce formatting
+  #       run: cargo fmt --check
 
   # `clippy` container job
   clippy:
