--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,9 @@ tracing-actix-web = "0.7.4"
 tracing-bunyan-formatter = "0.3.7"
 tracing-log = "0.1.3"
 tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
+unicode-segmentation = "1.10.1"
 uuid = { version = "1.3.3", features = ["v4"] }
+validator = "0.16.0"
 
 [dependencies.sqlx]
 version = "0.6.3"
@@ -44,3 +46,7 @@ features = [
 [dev-dependencies]
 reqwest = "0.11.18"
 once_cell = "1"
+claims = "0.7.1"
+fake = "~2.3"
+quickcheck = "0.9.2"
+quickcheck_macros = "0.9.1"
