--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ actix-web = "4.3.1"
 chrono = { version = "0.4.24", default-features = false, features = ["clock"] }
 config = "0.13.3"
 log = "0.4.17"
+rand = { version = "0.8.5", features = ["std_rng"] }
 secrecy = { version = "0.8.0", features = ["serde"] }
 serde = { version = "1.0.163", features = ["derive"] }
 serde-aux = "4.2.0"
@@ -58,3 +59,4 @@ quickcheck_macros = "0.9.1"
 tokio = { version = "1", features = ["rt", "macros"] }
 wiremock = "0.5.18"
 serde_json = "1.0.96"
+linkify = "0.9.0"
