--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,8 +15,11 @@ name = "zero2prod"
 [dependencies]
 actix-web = "4.3.1"
 anyhow = "1.0.71"
+argon2 = { version = "0.5.0", features = ["std"] }
+base64 = "0.21.2"
 chrono = { version = "0.4.24", default-features = false, features = ["clock"] }
 config = "0.13.3"
+htmlescape = "0.3.1"
 log = "0.4.17"
 rand = { version = "0.8.5", features = ["std_rng"] }
 secrecy = { version = "0.8.0", features = ["serde"] }
@@ -30,6 +33,7 @@ tracing-bunyan-formatter = "0.3.7"
 tracing-log = "0.1.3"
 tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
 unicode-segmentation = "1.10.1"
+urlencoding = "2.1.2"
 uuid = { version = "1.3.3", features = ["v4"] }
 validator = "0.16.0"
 
