--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,18 +13,24 @@ path = "src/main.rs"
 name = "zero2prod"
 
 [dependencies]
+actix-session = { version = "0.7.2", features = ["redis-rs-tls-session"] }
 actix-web = "4.3.1"
+actix-web-flash-messages = { version = "0.4.2", features = ["cookies"] }
+actix-web-lab = "0.19.1"
 anyhow = "1.0.71"
 argon2 = { version = "0.5.0", features = ["std"] }
 base64 = "0.21.2"
 chrono = { version = "0.4.24", default-features = false, features = ["clock"] }
 config = "0.13.3"
-htmlescape = "0.3.1"
+hex = "0.4.3"
+hmac = { version = "0.12.1", features = ["std"] }
 log = "0.4.17"
 rand = { version = "0.8.5", features = ["std_rng"] }
 secrecy = { version = "0.8.0", features = ["serde"] }
 serde = { version = "1.0.163", features = ["derive"] }
 serde-aux = "4.2.0"
+serde_json = "1.0.96"
+sha2 = "0.10.6"
 thiserror = "1.0.40"
 tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
 tracing = { version = "0.1.37", features = ["log"] }
@@ -33,8 +39,7 @@ tracing-bunyan-formatter = "0.3.7"
 tracing-log = "0.1.3"
 tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
 unicode-segmentation = "1.10.1"
-urlencoding = "2.1.2"
-uuid = { version = "1.3.3", features = ["v4"] }
+uuid = { version = "1.3.3", features = ["v4", "serde"] }
 validator = "0.16.0"
 
 [dependencies.sqlx]
@@ -66,3 +71,4 @@ tokio = { version = "1", features = ["rt", "macros"] }
 wiremock = "0.5.18"
 serde_json = "1.0.96"
 linkify = "0.9.0"
+reqwest_cookie_store = "0.5.0"
